# Rsolver

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
arduinolib/: ArduinoCommTest.py
arduinolib/Rsolver/: Rsolver.cpp  Rsolver.h
arduinolib/RsolverSketch/: RsolverSketch.ino
data/: CubeStates.txt
utils/: CMakeLists.txt  IRsolverControl.h  IRsolverSerial.h  IRsolverSerialMock.h  IRsolverUtils.h  IRsolverVision.h  RsolverControl.cpp  RsolverControl.h  RsolverHelpers.cpp  RsolverHelpers.h  RsolverSerial.cpp  RsolverSerial.h  RsolverTypes.h  RsolverUtils.cpp  RsolverUtils.h  RsolverVision.cpp  RsolverVision.h  Solver.cpp  Solver.h  ThistlethwaiteSolver.cpp  ThistlethwaiteSolver.h  cvtest.h
utils/test/: CMakeLists.txt  RsolverControlTest.cpp  RsolverIntegrationTest.cpp  RsolverSerialTest.cpp  RsolverUtilsTest.cpp  RsolverVisionTest.cpp
